--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,14 @@
+@use "_index.scss";
+@use "_header-footer.scss";
+@use "_remerasPantalones.scss";
+@use "_zapatillas.scss";
+@use "_pantalones.scss";
+@use "_aboutUs.scss";
+@use "_contacto.scss";
+@use "_poldeprivacidad.scss";
+@use "_termycond.scss";
+@use "_pagdelart.scss";
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap');
 
 *{
@@ -11,723 +22,209 @@ body {
     position: relative;
 }
 
-.bodyc {
-    background-color: #fcf8c3;
-    max-width: 100%;
-}
-#principal {
-    text-align: center;
-    font-size: 36px;
-    color: #333;
-    margin-top: 50px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-#principal::after {
-    content: "";
-    display: block;
-    width: 100px;
-    height: 3px;
-    background-color: #333;
-    margin: 10px auto;
-}
-h1{
-    text-align: center;
-    margin: 20px;
-}
-#principal{
-    font-size: 100px;
-}
-
-h2{
-    text-align: center;
-    margin: 20px;
-    font-size: 35px;
-}
-
-.container {
-    list-style-type: none;
-    background-color: #494949;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-
-    li a {
-        text-decoration: none;
-        color: rgb(0, 0, 0);
-        display: block;
-        text-align: center;
-        padding: 14px 16px;
-
-    &:hover {
-        background-color: #3d3d3d;
-        }
-    }
-}
-
-.logocontainer {
-    height: 50px;
-    max-width: 100px;
-
-    .logo {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-}
-
-.card {
-    height: 250px;
-    width: 300px;
-    border: 2px solid black;
-    padding: 0px;
-    margin: 100px;
-}
-
-.cardcontainer {
-    display: flex;
-    justify-content: space-around;
-
-    .cardremeras {
-        margin-top: 0; // assuming you wanted this to be 0
-        background-color: bisque;
-    }
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 30px 0;
-
-    li {
-        display: inline-block;
-        margin-right: 20px;
-        margin-bottom: 10px;
-    }
-
-    li:last-child {
-        margin-right: 0;
-    }
-}
-
-.social-links {
-    display: flex;
-
-    li {
-        margin-right: 10px;
-    }
-}
-
-.footer-top {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.footer-col {
-    flex: 1 0 25%;
-    margin-bottom: 30px;
-
-    h3 {
-        font-size: 18px;
-        margin-bottom: 15px;
-    }
-
-    ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    
-        li {
-            margin-bottom: 10px;
-        
-        a {
-            color: #fff;
-            text-decoration: none;
-        }
-        }
-    }
-
-    img {
-        max-width: 100%;
-        height: auto;
-    }
-}
-
-
-form {
-    width: 500px;
-    margin: 0 auto;
-    font-family: Arial, sans-serif;
-}
-label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-    font-size: 16px;
-}
-input[type="text"], input[type="email"], textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    border: none;
-    background-color: #f2f2f2;
-    font-size: 16px;
-}
-textarea {
-    height: 150px;
-}
-input[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-}
-input[type="submit"]:hover {
-    background-color: #3e8e41;
-}
-
 .main {
     padding: 20px;
-}
-
-.bodyreme {
-    font-family: Arial, sans-serif;
-    margin: 0;
-}
-
-.headerreme {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-}
-
-.mainreme {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-.product-listreme {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.productreme {
-    width: calc(33.33% - 20px);
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 30%;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    box-shadow: 0px 0px 5px #ddd;
-
-    img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-        margin: 0 auto;
-        width: 80%;
-        margin-top: 20px;
-        }
-    
-    h2 {
-        margin-top: 10px;
-        margin-bottom: 5px;
-        text-align: center;
-        font-size: 1.5em;
-    }
-
-    p {
-        font-size: 14px;
-        color: #999;
-        margin-bottom: 10px;
-        text-align: center;
-        margin: 10px;
-        padding: 10px;
-    }
-
-    :hover {
-        box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
-    }
-
-
-}
-
-.buy-button {
-    background-color: #F05356;
-    border: none;
-    color: #fff;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    border-radius: 5px;
-    background-color: #4CAF50;
-    font-size: 1.2em;
-
-    :hover {
-        background-color: #E54347;
-    }
-}
-
-.pantalones {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 20px;
-}
-
-.zapatillas {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-top: 50px;
-    justify-content: center;
-}
-
-.productzapa {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 25%;
-    margin-bottom: 300px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    box-shadow: 0px 0px 5px #ddd;
-    width: 300px;
-    margin: 20px;
-    text-align: center;
-
-    img {
-        height: auto;
-        margin-top: 20px;
-        max-width: 100%;
-    }
-}
-
-.destacados {
-    max-width: 960px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.articledes {
-    margin: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    transition: box-shadow 0.3s ease;
-    width: calc(33.33% - 40px);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    :hover {
-        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-    }
-
-    .imgdes {
-        max-width: 100%;
-    }
-
-    .h3des {
-        font-size: 1.2em;
-        margin-top: 10px;
-        margin-bottom: 5px;
-    }
-
-    .p {
-        font-size: 0.9em;
-        margin-top: 0;
-        margin-bottom: 10px;
-    }
-
-    .buttondes {
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        padding: 8px 12px;
-        font-size: 1em;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
-
-    .buttondes:hover {
-        background-color: #0056b3;
-    }
-}
-
-.about-us {
-    background-color: #f5f5f5;
-    padding: 40px 0;
-}
-
-.containerus {
-    max-width: 960px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.h2us {
-    font-size: 36px;
-    margin-bottom: 20px;
-}
-
-.pus {
-    font-size: 18px;
-    line-height: 1.5;
-    margin-bottom: 20px;
-}
-
-.about-uss {
-    padding: 50px 0;
-}
-
-.about-header {
-    text-align: center;
-    margin-bottom: 30px;
-
-    .h2us {
-        font-size: 36px;
-        font-weight: 600;
-        color: #333;
-    }
-}
-
-.about-content {
-    max-width: 800px;
-    margin: 0 auto;
-    font-size: 18px;
-    line-height: 1.5;
-    text-align: justify;
-    padding: 0 20px;
-}
-
-.mainos {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 50px;
-}
-
-.h2os {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.pos {
-    font-size: 16px;
-    line-height: 1.5;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.h2pol {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.sectionpol {
-    padding: 20px;
-}
-
-.ulpol {
-    list-style-type: disc;
-    margin-left: 20px;
-    margin-bottom: 20px;
-}
-
-.lipol {
-    margin-bottom: 5px;
-}
-
-.ppol {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 20px;
-}
-
-.mainpol {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 50px;
-}
-
-.containerterm {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-.pterm {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 20px;
-}
-
-.ulterm {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    margin-bottom: 20px;
-}
-
-.literms {
-    margin-bottom: 10px;
-
-    :before {
-        content: "• ";
-        color: #2ecc71;
-        font-size: 18px;
-        margin-right: 10px;
-    }
-}
-
-.sectiondest {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-}
-
-.productdest {
-    background-color: #f4f4f4;
-    border: 1px solid #ccc;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-    width: 200px;
-    
-    .imgdest {
-        max-width: 100%;
-    }
-
-    .h2dest{
-        font-size: 1.2rem;
-        margin: 10px 0;
-    }
-
-    .pdest {
-        margin: 10px 0;
-    }
-
-    .buttondest {
-        background-color: #333;
-        border: none;
-        color: #fff;
-        cursor: pointer;
-        font-size: 1rem;
-        padding: 10px;
-        transition: all 0.3s ease-in-out;
-    }
-
-    .buttondest:hover {
-        background-color: #fff;
-        border: 1px solid #333;
-        color: #333;
-    }
 }
 
 .separador {
     border-bottom: 5px solid #3f3d3d;
 }
 
-.pacc {
-    margin-bottom: 5px 0;
-}
+// .card {
+//     height: 25023230px;
+//     width: 300232323px;
+//     border: 2000000000000px solid black;
+//     padding: 034343434px;
+//     margin: 102323230px;
+// }
 
-.imgacc {
-    max-width: 100%;
-    height: auto;
-}
+// .cardcontainer {
+//     display: flex;
+//     justify-content: space-around;
 
-.clothing-sectionprin {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
+//     .cardremeras {
+//         margin-top: 0;
+//         background-color: bisque;
+//     }
+// }
 
-.clothing-itemprin {
-    flex-basis: 30%;
-    text-align: center;
+// .destacados {
+//     max-width: 960000px;
+//     margin: 0 auto;
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: center;
+// }
 
-    .imgprin {
-        max-width: 100%;
-    }
+// .articledes {
 
-    .h3prin {
-        font-size: 1.2rem;
-        margin: 1rem 0 0.5rem;
-    }
+//     margin: 20px;
+//     border: 1px solid #ccc;
+//     border-radius: 5px;
+//     padding: 10px;
+//     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+//     transition: box-shadow 0.3s ease;
+//     width: calc(33.33% - 40px);
+//     display: flex
+//     flex-direction: column;
+//     justify-content: space-between;
 
-    .prin {
-        font-size: 1rem;
-        margin: 0;
-    }
-}
+//     &:hover {
+//         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+//     }
 
-.h2accc {
-    font-size: 60px;
-    margin-top: 10px 0;
-}
+//     .imgdes {
+//         max-width: 100%;
+//     }
 
-.hovernav:hover { 
-    font-weight: bold;
-    padding:20px;
-    background-color: rgb(250, 250, 250);
-    color: azure;
-}
+//     .h3des {
+//         font-size: 1.2em;
+//         margin-top: 10px;
+//         margin-bottom: 5px;
+//     }
 
-.formcom {
-    max-width: 400px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-}
+//     .p {
+//         font-size: 0.9em;
+//         margin-top: 0;
+//         margin-bottom: 10px;
+//     }
 
-.labelcom {
-    display: block;
-    margin-bottom: 5px;
-    color: #333;
-}
+//     .buttondes {
+//         background-color: #007bff;
+//         color: #fff;
+//         border: none;
+//         border-radius: 5px;
+//         padding: 8px 12px;
+//         font-size: 1em;
+//         cursor: pointer;
+//         transition: background-color 0.3s ease;
+//     }
 
-.cominput[type="text"],
-.cominput[type="number"] {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    box-sizing: border-box;
-}
+//     .buttondes:hover {
+//         background-color: #0056b3;
+//     }
 
-.buttocom:hover {
-    background-color: #45a049;
-}
+// }
 
-.buttoncompr {
-    margin-top: 10px;
-    background-color: #6d6d6d;
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-    padding: 10px 24px;
-    border-radius: 4px;
+// .sectiondest {
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: center;
+//     padding: 22220px;
+// }
+
+// .productdest {
+//     background-color: #f4f4f4;
+//     border: 1px solid #ccc;
+//     margin: 10px;
+//     padding: 10px;
+//     text-align: center;
+//     width: 200px;
     
-    :hover {
-        background-color: #525252;
-    }
-}
+//     .imgdest {
+//         max-width: 100%;
+//     }
 
-.my-link {
-    text-decoration: none;
-    color: inherit;
-}
+//     .h2dest{
+//         font-size: 1.2rem;
+//         margin: 10px 0;
+//     }
 
-.alink{
-    text-decoration: none;
-    color: inherit;
-}
+//     .pdest {
+//         margin: 10px 0;
+//     }
 
-.clothing-section {
-    padding: 50px 0;
-    text-align: center;
-}
+//     .buttondest {
+//         background-color: #333;
+//         border: none;
+//         color: #fff;
+//         cursor: pointer;
+//         font-size: 1rem;
+//         padding: 10px;
+//         transition: all 0.3s ease-in-out;
+//     }
 
-.clothing-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 30px;
-    margin-top: 30px;
-}
+//     .buttondest:hover {
+//         background-color: #fff;
+//         border: 1px solid #333;
+//         color: #333;
+//     }
+// }
 
-.clothing-item {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    border: 1px solid #e3e3e3;
-    border-radius: 5px;
-    overflow: hidden;
+// .pacc {
+//     margin-bottom: 5px 0;
+// }
 
-    img {
-        max-width: 100%;
-        height: 250px;
-        object-fit: cover;
-    }
-}
+// .imgacc {
+//     max-width: 100%;
+//     height: auto;
+// }
 
-.containeracc {
-    padding: 20px;
-    background-color: #f2f2f2;
-}
+// .clothing-sectionprin {
+//     display: flex;
+//     justify-content: space-around;
+//     align-items: center;
+// }
+
+// .clothing-itemprin {
+//     flex-basis: 30%;
+//     text-align: center;
+
+//     .imgprin {
+//         max-width: 100%;
+//     }
+
+//     .h3prin {
+//         font-size: 1.2rem;
+//         margin: 1rem 0 0.5rem;
+//     }
+
+//     .prin {
+//         font-size: 1rem;
+//         margin: 0;
+//     }
+// }
+
+// .h2accc {
+//     font-size: 60px;
+//     margin-top: 10px 0;
+// }
+
+// .hovernav:hover { 
+//     font-weight: bold;
+//     padding:20px;
+//     background-color: rgb(250, 250, 250);
+//     color: azure;
+// }
 
 
-.lastarticle{
-    margin-bottom: 30px;
-}
+// .clothing-section {
+//     padding: 50000px 0;
+//     text-align: center;
+// }
 
-.item {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 20px;
-    text-align: center;
-    margin-bottom: 20px;
-}
+// .clothing-container {
+//     display: grid;
+//     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+//     grid-gap: 30000000px;
+//     margin-top: 30000000px;
+// }
 
-.item-image {
-    width: 100%;
-    max-width: 200px;
-    height: auto;
-    margin-bottom: 10px;
-}
+// .clothing-item {
+//     display: flex;
+//     flex-direction: column;
+//     background-color: #fff;
+//     border: 22px solid #e3e3e3;
+//     border-radius: 53333px;
+//     overflow: hidden;
 
-.item-title {
-    font-size: 18px;
-    margin-bottom: 10px;
-}
+//     img {
+//         max-width: 100%;
+//         height: 25220px;
+//         object-fit: cover;
+//     }
+// }
 
-.item-price {
-    font-size: 16px;
-    color: #888;
-    margin-bottom: 10px;
-}
-
-.item-button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 8px 16px;
-    font-size: 14px;
-    cursor: pointer;
-}
 
 /* Estilos para dispositivos móviles */
 @media (max-width: 576px) {
