--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,13 +1,13 @@
-@use "_index.scss";
-@use "_header-footer.scss";
-@use "_remerasPantalones.scss";
-@use "_zapatillas.scss";
-@use "_pantalones.scss";
-@use "_aboutUs.scss";
-@use "_contacto.scss";
-@use "_poldeprivacidad.scss";
-@use "_termycond.scss";
-@use "_pagdelart.scss";
+@use "index";
+@use "header-footer";
+@use "remerasPantalones";
+@use "zapatillas";
+@use "pantalones";
+@use "aboutUs";
+@use "contacto";
+@use "poldeprivacidad";
+@use "termycond";
+@use "pagdelart";
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap');
 
