--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,6 +39,50 @@ h2 {
   font-size: 35px;
 }
 
+.containeracc {
+  padding: 20px;
+  background-color: #f2f2f2;
+}
+
+.lastarticle {
+  margin-bottom: 30px;
+}
+
+.item {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.item-image {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.item-title {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.item-price {
+  font-size: 16px;
+  color: #888;
+  margin-bottom: 10px;
+}
+
+.item-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
 .container {
   list-style-type: none;
   background-color: #494949;
@@ -202,6 +246,13 @@ footer li:last-child {
   background-color: #E54347;
 }
 
+.pantalones {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+}
+
 .zapatillas {
   display: flex;
   flex-wrap: wrap;
@@ -229,11 +280,9 @@ footer li:last-child {
   max-width: 100%;
 }
 
-.pantalones {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 20px;
+.stylesh3 {
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .about-us {
@@ -316,6 +365,11 @@ input[type=submit] {
 
 input[type=submit]:hover {
   background-color: #3e8e41;
+  margin: 100px;
+}
+
+.separadors {
+  margin: 100px;
 }
 
 .sectionpol {
@@ -431,86 +485,7 @@ body {
 
 .separador {
   border-bottom: 5px solid #3f3d3d;
-}
-
-.my-link {
-  text-decoration: none;
-  color: inherit;
-}
-
-.alink {
-  text-decoration: none;
-  color: inherit;
-}
-
-.clothing-section {
-  padding: 50px 0;
-  text-align: center;
-}
-
-.clothing-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 30px;
-  margin-top: 30px;
-}
-
-.clothing-item {
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  border: 1px solid #e3e3e3;
-  border-radius: 5px;
-  overflow: hidden;
-}
-.clothing-item img {
-  max-width: 100%;
-  height: 250px;
-  object-fit: cover;
-}
-
-.containeracc {
-  padding: 20px;
-  background-color: #f2f2f2;
-}
-
-.lastarticle {
-  margin-bottom: 30px;
-}
-
-.item {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 20px;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.item-image {
-  width: 100%;
-  max-width: 200px;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.item-title {
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
-.item-price {
-  font-size: 16px;
-  color: #888;
-  margin-bottom: 10px;
-}
-
-.item-button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 8px 16px;
-  font-size: 14px;
-  cursor: pointer;
+  margin: 20px;
 }
 
 /* Estilos para dispositivos móviles */
@@ -570,7 +545,7 @@ body {
   .footer-col {
     margin-bottom: 20px;
   }
-  .footer-bottom {
+  .footer-col .footer-bottom {
     font-size: 12px;
   }
 }
