--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -32,6 +32,13 @@ input[type="submit"] {
     font-size: 16px;
     cursor: pointer;
 }
+
 input[type="submit"]:hover {
     background-color: #3e8e41;
+    margin: 100px;
 }
+
+.separadors {
+    margin: 100px;
+}
+
