--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -28,202 +28,8 @@ body {
 
 .separador {
     border-bottom: 5px solid #3f3d3d;
+    margin: 20px;
 }
-
-// .card {
-//     height: 25023230px;
-//     width: 300232323px;
-//     border: 2000000000000px solid black;
-//     padding: 034343434px;
-//     margin: 102323230px;
-// }
-
-// .cardcontainer {
-//     display: flex;
-//     justify-content: space-around;
-
-//     .cardremeras {
-//         margin-top: 0;
-//         background-color: bisque;
-//     }
-// }
-
-// .destacados {
-//     max-width: 960000px;
-//     margin: 0 auto;
-//     display: flex;
-//     flex-wrap: wrap;
-//     justify-content: center;
-// }
-
-// .articledes {
-
-//     margin: 20px;
-//     border: 1px solid #ccc;
-//     border-radius: 5px;
-//     padding: 10px;
-//     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-//     transition: box-shadow 0.3s ease;
-//     width: calc(33.33% - 40px);
-//     display: flex
-//     flex-direction: column;
-//     justify-content: space-between;
-
-//     &:hover {
-//         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-//     }
-
-//     .imgdes {
-//         max-width: 100%;
-//     }
-
-//     .h3des {
-//         font-size: 1.2em;
-//         margin-top: 10px;
-//         margin-bottom: 5px;
-//     }
-
-//     .p {
-//         font-size: 0.9em;
-//         margin-top: 0;
-//         margin-bottom: 10px;
-//     }
-
-//     .buttondes {
-//         background-color: #007bff;
-//         color: #fff;
-//         border: none;
-//         border-radius: 5px;
-//         padding: 8px 12px;
-//         font-size: 1em;
-//         cursor: pointer;
-//         transition: background-color 0.3s ease;
-//     }
-
-//     .buttondes:hover {
-//         background-color: #0056b3;
-//     }
-
-// }
-
-// .sectiondest {
-//     display: flex;
-//     flex-wrap: wrap;
-//     justify-content: center;
-//     padding: 22220px;
-// }
-
-// .productdest {
-//     background-color: #f4f4f4;
-//     border: 1px solid #ccc;
-//     margin: 10px;
-//     padding: 10px;
-//     text-align: center;
-//     width: 200px;
-    
-//     .imgdest {
-//         max-width: 100%;
-//     }
-
-//     .h2dest{
-//         font-size: 1.2rem;
-//         margin: 10px 0;
-//     }
-
-//     .pdest {
-//         margin: 10px 0;
-//     }
-
-//     .buttondest {
-//         background-color: #333;
-//         border: none;
-//         color: #fff;
-//         cursor: pointer;
-//         font-size: 1rem;
-//         padding: 10px;
-//         transition: all 0.3s ease-in-out;
-//     }
-
-//     .buttondest:hover {
-//         background-color: #fff;
-//         border: 1px solid #333;
-//         color: #333;
-//     }
-// }
-
-// .pacc {
-//     margin-bottom: 5px 0;
-// }
-
-// .imgacc {
-//     max-width: 100%;
-//     height: auto;
-// }
-
-// .clothing-sectionprin {
-//     display: flex;
-//     justify-content: space-around;
-//     align-items: center;
-// }
-
-// .clothing-itemprin {
-//     flex-basis: 30%;
-//     text-align: center;
-
-//     .imgprin {
-//         max-width: 100%;
-//     }
-
-//     .h3prin {
-//         font-size: 1.2rem;
-//         margin: 1rem 0 0.5rem;
-//     }
-
-//     .prin {
-//         font-size: 1rem;
-//         margin: 0;
-//     }
-// }
-
-// .h2accc {
-//     font-size: 60px;
-//     margin-top: 10px 0;
-// }
-
-// .hovernav:hover { 
-//     font-weight: bold;
-//     padding:20px;
-//     background-color: rgb(250, 250, 250);
-//     color: azure;
-// }
-
-
-// .clothing-section {
-//     padding: 50000px 0;
-//     text-align: center;
-// }
-
-// .clothing-container {
-//     display: grid;
-//     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-//     grid-gap: 30000000px;
-//     margin-top: 30000000px;
-// }
-
-// .clothing-item {
-//     display: flex;
-//     flex-direction: column;
-//     background-color: #fff;
-//     border: 22px solid #e3e3e3;
-//     border-radius: 53333px;
-//     overflow: hidden;
-
-//     img {
-//         max-width: 100%;
-//         height: 25220px;
-//         object-fit: cover;
-//     }
-// }
 
 
 /* Estilos para dispositivos móviles */
@@ -231,79 +37,80 @@ body {
 
     /* Estilos del encabezado */
 
-.navbar-nav {
-    margin-top: 10px;
-    }
+    .navbar-nav {
+        margin-top: 10px;
+        }
     
-.logocontainer {
-    text-align: center;
-    }
+    .logocontainer {
+        text-align: center;
+        }
     
-.logo {
-    max-width: 150px;
-    }
+    .logo {
+        max-width: 150px;
+        }
     
     /* Estilos del título principal */
 
-#principal {
-    font-size: 24px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    }
+    #principal {
+        font-size: 24px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        }
     
     /* Estilos de la sección "INDUMENTARIA" */
 
-.section-title {
-    font-size: 20px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    }
+    .section-title {
+        font-size: 20px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        }
     
     /* Estilos de los artículos */
 
-.item {
-    text-align: center;
-    margin-bottom: 20px;
-    }
+    .item {
+        text-align: center;
+        margin-bottom: 20px;
+        }
     
-.item-image {
-    max-width: 100%;
-    height: auto;
-    }
+    .item-image {
+        max-width: 100%;
+        height: auto;
+        }
     
-.item-title {
-    font-size: 16px;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    }
+    .item-title {
+        font-size: 16px;
+        margin-top: 10px;
+        margin-bottom: 5px;
+        }
     
     .item-price {
-    font-size: 14px;
-    margin-bottom: 10px;
-    }
+        font-size: 14px;
+        margin-bottom: 10px;
+        }
     
     .buy-button {
-    margin-bottom: 10px;
-    }
+        margin-bottom: 10px;
+        }
 
-.pantalones {
-    justify-content: center;
-}
+    .pantalones {
+        justify-content: center;
+        }       
 
-.productreme {
-    width: 100%;
-    max-width: 400px;
-    margin: 20px 0;
-}
+    .productreme {
+        width: 100%;
+        max-width: 400px;
+        margin: 20px 0;
+        }
     
     /* Estilos del pie de página */
 
     .footer-col {
-    margin-bottom: 20px;
-    }
+        margin-bottom: 20px;
+        
     
     .footer-bottom {
-    font-size: 12px;
+        font-size: 12px;
+        }
     }
 }
 
@@ -311,44 +118,45 @@ body {
 @media (min-width: 576px) and (max-width: 992px) {
 
     /* Estilos del encabezado */
-.logo {
-    max-width: 200px;
-    }
+    .logo {
+        max-width: 200px;
+        }
     
     /* Estilos del título principal */
 
-#principal {
-    font-size: 36px;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    }
+    #principal {
+        font-size: 36px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        }
     
     /* Estilos de la sección "INDUMENTARIA" */
 
-.section-title {
-    font-size: 28px;
-    margin-top: 40px;
-    margin-bottom: 20px;
-    }
+    .section-title {
+        font-size: 28px;
+        margin-top: 40px;
+        margin-bottom: 20px;
+        }
     
     /* Estilos de los artículos */
 
-.item-title {
-    font-size: 20px;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    }
+    .item-title {
+        font-size: 20px;
+        margin-top: 15px;
+        margin-bottom: 10px;
+        }
     
-.item-price {
-    font-size: 18px;
-    margin-bottom: 10px;
-    }
+    .item-price {
+        font-size: 18px;
+        margin-bottom: 10px;
+        }
     
     /* Estilos del pie de página */
 
-.footer-bottom {
-    font-size: 14px;
-    }
+    .footer-bottom {
+        font-size: 14px;
+        }
+
 }
 
 
