--- a/sass/_header-footer.scss
+++ b/sass/_header-footer.scss
@@ -71,7 +71,9 @@ footer {
 
     h3 {
         font-size: 18px;
+        margin: 10px;
         margin-bottom: 15px;
+        text-align: center;
     }
 
     ul {
@@ -87,6 +89,7 @@ footer {
             text-decoration: none;
         }
         }
+
     }
 
     img {
