--- a/css/estilos.css
+++ b/css/estilos.css
@@ -146,7 +146,9 @@ footer li:last-child {
 }
 .footer-col h3 {
   font-size: 18px;
+  margin: 10px;
   margin-bottom: 15px;
+  text-align: center;
 }
 .footer-col ul {
   list-style: none;
